--- a/public/topicDetails.html
+++ b/public/topicDetails.html
@@ -1,17 +1,33 @@
 <div class="page-group">
   <div class="page" id="topicDetails">
     <div class="content" id="topicDetailsConetnt">
-      <div class="topBar">
+       <!-- 隐藏顶部通栏 -->
+    <div class="topShowOrHide">
         <a class=" pull-left getBackToPage" href="javascript:history.go(-1);">
           <span style="padding-left: 10px">
-            <img src="./images/leftBack.png" alt="" style="width:10px;margin-top:14px;">
+            <img src="./images/blakLeft.png" alt="" style="width:18px;margin-top:14px;">
           </span>
         </a>
+        <h1 class="title" style="line-height:2.75rem">雪景</h1>
         <a class="pull-right getBackToPage" href="#">
           <span style="padding-right: 10px">
             <img src="./images/share.png" alt="" style="width:20px;margin-top:12px;">
           </span>
         </a>
+      </div>
+      <div class="topBar">
+        <div class="top">
+          <a class=" pull-left getBackToPage" href="javascript:history.go(-1);">
+            <span style="padding-left: 10px">
+              <img src="./images/leftBack.png" alt="" style="width:10px;margin-top:14px;">
+            </span>
+          </a>
+          <a class="pull-right getBackToPage" href="#">
+            <span style="padding-right: 10px">
+              <img src="./images/share.png" alt="" style="width:20px;margin-top:12px;">
+            </span>
+          </a>
+        </div>
         <div class="pictureInfo">
           <h4>雪景</h4>
           <div class="history">
@@ -30,7 +46,7 @@
           <div class="active_title">出发,只为途中和你相遇....</div>
           <div class="active_article"></div>
           <div class="active_img">
-            <img src="./images/1.jpg">
+            <img src="./images/timg6.jpg">
           </div>
           <div class="good">
             <div class="good_people">
