增加的美篇印品页

--- a/public/rankingList.html
+++ b/public/rankingList.html
@@ -3,10 +3,10 @@
     <header class="bar bar-nav">
       <a class="button button-link button-nav pull-left getBackToPage" href="javascript:history.go(-1);">
         <span style="padding-left: 10px">
-          <img src="./images/leftBack.png" alt="" style="width:10px;margin-top:14px;">
+          <img src="./images/leftBack.png" alt="" style="width:10px;margin-top:12px;">
         </span>
       </a>
-      <h1 class="title" style="line-height:2.5rem;color:#fff;">排行榜</h1>
+      <h1 class="title" style="line-height:2.3rem;color:#fff;">排行榜</h1>
       <a class="button button-link button-nav pull-right getBackToPage" href="javascript:history.go(-1);">
         <span style="padding-right: 10px">
           周榜
@@ -20,18 +20,80 @@
         <div class="sencond">
           <div class="sign">
             <img src="./images/rank2.jpg" alt="">
+            <div class="infoTou">
+              <img src="./images/timg.jpg" alt="">
+            </div>
+            <span class="infoName">雪中漫步</span>
           </div>
         </div>
         <div class="first">
           <div class="sign">
             <img src="./images/rank1.jpg" alt="">
+            <div class="infoTou">
+              <img src="./images/23.jpg" alt="">
+            </div>
+            <span class="infoName">几度枫红</span>
           </div>
         </div>
         <div class="third">
           <div class="sign">
             <img src="./images/rank3.jpg" alt="">
+            <div class="infoTou">
+              <img src="./images/1.jpg" alt="">
+            </div>
+            <span class="infoName">心若无尘</span>
           </div>
         </div>
+      </div>
+      <!-- 排行列表 -->
+      <div class="rank_list">
+        <ul>
+          <li>
+            <span class="order">4</span>
+            <img src="./images/5.jpg" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">5</span>
+            <img src="./images/17.png" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">6</span>
+            <img src="./images/01.png" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">7</span>
+            <img src="./images/timg.jpg" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">8</span>
+            <img src="./images/timg1.jpg" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">9</span>
+            <img src="./images/5.jpg" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">7</span>
+            <img src="./images/timg.jpg" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">8</span>
+            <img src="./images/timg1.jpg" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+          <li>
+            <span class="order">9</span>
+            <img src="./images/5.jpg" alt="">
+            <span class="info_name">画中有画</span>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
