--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./css/topicDetails/topicDetails.css">
   <link rel="stylesheet" href="./css/findHoby/findHoby.css">
   <link rel="stylesheet" href="./css/rankingList/rankingList.css">
+  <link rel="stylesheet" href="./css/meipianYP/meipianYP.css">
 </head>
 <style>
   .swiper-container {
@@ -274,15 +275,16 @@
       </nav>
     </div>
   </div>
-  <script type='text/javascript' src='./js/zepto.min.js' charset='utf-8'></script>
-  <script type='text/javascript' src='./js/sm.min.js' charset='utf-8'></script>
-  <script type="text/javascript" src="./js/total.js"></script>
-  <script type="text/javascript" src="./js/index/index.js" charset='utf-8'></script>
+  <script src='./js/zepto.min.js' charset='utf-8'></script>
+  <script src='./js/sm.min.js' charset='utf-8'></script>
+  <script src="./js/total.js"></script>
+  <script src="./js/index/index.js" charset='utf-8'></script>
   <script src="./swiper/js/swiper.min.js"></script>
   <script src="./js/myPage/myPage.js" charset='utf-8'></script>
   <script src="./js/specialList/specialList.js" charset='utf-8'></script>
   <script src="./js/topicDetails/topicDetails.js" charset='utf-8'></script>
   <script src="./js/findHoby/findHoby.js" charset='utf-8'></script>
+  <script src="./js/rankingList/rankingList.js" charset='utf-8'></script>
   <script src="./js/touchslider.js"></script>
   <script type="text/javascript">
     $.init();
@@ -302,6 +304,8 @@
       } else if(pageId == "hoby"){
         findHobyInload();
       } else if(pageId == "rankingList"){
+        rankingList();
+      } else if(pageId == "meipianYP"){
         
       }
     });
