--- a/public/meipianYP.html
+++ b/public/meipianYP.html
@@ -6,10 +6,10 @@
           <img src="./images/leftBack.png" alt="" style="width:10px;margin-top:12px;">
         </span>
       </a>
-      <h1 class="title" style="line-height:2.3rem;color:#fff;">排行榜</h1>
+      <h1 class="title" style="line-height:2.3rem;color:#fff;">美篇印品</h1>
       <a class="button button-link button-nav pull-right getBackToPage" href="javascript:history.go(-1);">
         <span style="padding-right: 10px;font-size:10px;">
-          美篇印品
+          了解美篇书
         </span>
       </a>
     </header>
