--- a/public/myPage.html
+++ b/public/myPage.html
@@ -1,24 +1,25 @@
 <div class="page-group">
   <div class="page" id="myPage">
-       <!-- 隐藏顶部通栏 -->
-       <div class="topbarShowOrHide" style="position:fixed;top:0px">
-          <a class=" button-nav pull-left getBackToPage" href="javascript:history.go(-1)">
-            <span style="padding-left:20px;width: 0.5rem;height:1.3rem;padding-top: 0.4rem;margin-top:6px">
-              <img src="./images/09(1).png" alt="" style="width: 1rem;height:1.3rem;padding-top: 0.4rem;margin-top:10px">
-            </span>
-          </a>
-          <h1 class="title" style="line-height:2.75rem">美篇用户</h1>
-          <a class=" button-nav pull-right getBackToPage" href="javascript:history.go(-1)">
-            <span style="padding-right: 38px">
-              <img src="./images/10(1).png" alt="" style="width: 1rem;height:1.3rem;padding-top: 0.4rem;margin-top:10px">
-            </span>
-          </a>
-          <a class=" button-nav pull-right getBackToPage" href="javascript:history.go(-1)">
-            <span style="padding-right: 2px">
-              <img src="./images/11(1).png" alt="" style="width: 1rem;height:1.3rem;padding-top: 0.4rem;margin-top:10px">
-            </span>
-          </a>
-        </div>
+    <!-- 隐藏顶部通栏 -->
+    <div class="topbarShowOrHide" style="position:fixed;top:0px">
+      <a class=" button-nav pull-left getBackToPage" href="javascript:history.go(-1)">
+        <span style="padding-left:20px;width: 0.5rem;height:1.3rem;padding-top: 0.4rem;margin-top:6px">
+          <img src="./images/09(1).png" alt="" style="width: 1rem;height:1.3rem;padding-top: 0.4rem;margin-top:10px">
+        </span>
+      </a>
+      <!-- <h1 class="title" style="line-height:2.75rem">美篇用户</h1> -->
+      美篇用户
+      <a class=" button-nav pull-right getBackToPage" href="javascript:history.go(-1)">
+        <span style="padding-right: 38px">
+          <img src="./images/10(1).png" alt="" style="width: 1rem;height:1.3rem;padding-top: 0.4rem;margin-top:10px">
+        </span>
+      </a>
+      <a class=" button-nav pull-right getBackToPage" href="javascript:history.go(-1)">
+        <span style="padding-right: 2px">
+          <img src="./images/11(1).png" alt="" style="width: 1rem;height:1.3rem;padding-top: 0.4rem;margin-top:10px">
+        </span>
+      </a>
+    </div>
     <div class="content pull-to-refresh-content" id="content">
       <!-- 默认的下拉刷新层 -->
       <div class="pull-to-refresh-layer">
@@ -43,7 +44,7 @@
             </span>
           </a>
         </div>
-        
+
         <div class="topContent">
           <span style="padding-left: 20px">
             <img src="./images/info.png" alt="" style="width: 3rem;height:3rem;padding-top: 0.4rem;margin-top:10px;flex:1">
@@ -93,13 +94,13 @@
           <span class="time">2017-04-28</span>
         </div>
         <div class="titleList">
-            <div class="titleName">
-              <span class="sign">样例</span>
-              <span>我在微信有了自己的专栏!</span>
-            </div>
-            <img src="./images/timg.jpg" alt="">
-            <span class="time">2017-04-28</span>
+          <div class="titleName">
+            <span class="sign">样例</span>
+            <span>我在微信有了自己的专栏!</span>
           </div>
+          <img src="./images/timg.jpg" alt="">
+          <span class="time">2017-04-28</span>
+        </div>
         <div class="titleList">
           <div class="titleName">
             <span class="sign">样例</span>
